Add Models.dll, List all citizens from Database

--- a/Phonebook/Phonebook.Web/Phonebook.Web.csproj
+++ b/Phonebook/Phonebook.Web/Phonebook.Web.csproj
@@ -239,6 +239,12 @@
       <DependentUpon>Web.config</DependentUpon>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Phonebook.Models\Phonebook.Models.csproj">
+      <Project>{846a0d7c-efef-4baa-bb8e-b66cf9d4b00a}</Project>
+      <Name>Phonebook.Models</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
