--- a/Phonebook/Phonebook.Contracts/Phonebook.Contracts.csproj
+++ b/Phonebook/Phonebook.Contracts/Phonebook.Contracts.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{00E1441D-C6A7-4CAD-8B68-CD7D4C1D85DA}</ProjectGuid>
+    <ProjectGuid>{A2DA7954-CC1D-424B-9072-05249FD9B704}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Phonebook.Data</RootNamespace>
-    <AssemblyName>Phonebook.Data</AssemblyName>
+    <RootNamespace>Phonebook.Contracts</RootNamespace>
+    <AssemblyName>Phonebook.Contracts</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,8 +40,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\IAddress.cs" />
+    <Compile Include="Models\ICitizen.cs" />
+    <Compile Include="Models\ICity.cs" />
+    <Compile Include="Models\IPhoneNumber.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="DatabaseProvider.cs" />
+    <Compile Include="Services\ICitizensService.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Database\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
