--- a/Phonebook/Phonebook.Web/Phonebook.Web.csproj
+++ b/Phonebook/Phonebook.Web/Phonebook.Web.csproj
@@ -48,6 +48,15 @@
       <HintPath>..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.3\lib\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Ninject, Version=3.2.0.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
+      <HintPath>..\packages\Ninject.3.2.0.0\lib\net45-full\Ninject.dll</HintPath>
+    </Reference>
+    <Reference Include="Ninject.Web, Version=3.2.0.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
+      <HintPath>..\packages\Ninject.Web.3.2.1.0\lib\net45-full\Ninject.Web.dll</HintPath>
+    </Reference>
+    <Reference Include="Ninject.Web.Common, Version=3.2.0.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
+      <HintPath>..\packages\Ninject.Web.Common.3.2.0.0\lib\net45-full\Ninject.Web.Common.dll</HintPath>
+    </Reference>
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -82,6 +91,9 @@
     </Reference>
     <Reference Include="System.Web.Optimization, Version=1.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35">
       <HintPath>..\packages\Microsoft.AspNet.Web.Optimization.1.1.3\lib\net40\System.Web.Optimization.dll</HintPath>
+    </Reference>
+    <Reference Include="WebActivatorEx, Version=2.0.0.0, Culture=neutral, PublicKeyToken=7b26dc2a43f6a0d4, processorArchitecture=MSIL">
+      <HintPath>..\packages\WebActivatorEx.2.0\lib\net40\WebActivatorEx.dll</HintPath>
     </Reference>
     <Reference Include="WebGrease">
       <Private>True</Private>
@@ -178,6 +190,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\BundleConfig.cs" />
+    <Compile Include="App_Start\NinjectWeb.cs" />
+    <Compile Include="App_Start\NinjectWebCommon.cs" />
     <Compile Include="Citizens.aspx.cs">
       <DependentUpon>Citizens.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -243,6 +257,10 @@
     <ProjectReference Include="..\Phonebook.Contracts\Phonebook.Contracts.csproj">
       <Project>{a2da7954-cc1d-424b-9072-05249fd9b704}</Project>
       <Name>Phonebook.Contracts</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Phonebook.DataBase\Phonebook.Database.csproj">
+      <Project>{00E1441D-C6A7-4CAD-8B68-CD7D4C1D85DA}</Project>
+      <Name>Phonebook.Database</Name>
     </ProjectReference>
     <ProjectReference Include="..\Phonebook.Models\Phonebook.Models.csproj">
       <Project>{846a0d7c-efef-4baa-bb8e-b66cf9d4b00a}</Project>
