Remove Contact.aspx and rename Citizens to Contacts

--- a/Phonebook/Phonebook.Web/Phonebook.Web.csproj
+++ b/Phonebook/Phonebook.Web/Phonebook.Web.csproj
@@ -138,8 +138,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Citizens.aspx" />
-    <Content Include="Contact.aspx" />
+    <Content Include="Contacts.aspx" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Site.css" />
@@ -192,21 +191,14 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\NinjectWeb.cs" />
     <Compile Include="App_Start\NinjectWebCommon.cs" />
-    <Compile Include="Citizens.aspx.cs">
-      <DependentUpon>Citizens.aspx</DependentUpon>
+    <Compile Include="Contacts.aspx.cs">
+      <DependentUpon>Contacts.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Citizens.aspx.designer.cs">
-      <DependentUpon>Citizens.aspx</DependentUpon>
+    <Compile Include="Contacts.aspx.designer.cs">
+      <DependentUpon>Contacts.aspx</DependentUpon>
     </Compile>
     <Compile Include="App_Start\RouteConfig.cs" />
-    <Compile Include="Contact.aspx.cs">
-      <DependentUpon>Contact.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Contact.aspx.designer.cs">
-      <DependentUpon>Contact.aspx</DependentUpon>
-    </Compile>
     <Compile Include="Default.aspx.cs">
       <DependentUpon>Default.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
